# ccrawler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  main.cpp  robotstxt.cpp  weblistener.cpp
backend/: CMakeLists.txt
backend/cmake/: cpr.cmake  ixwebsocket.cmake  json.cmake  mbedtls.cmake
backend/src/: Crawler.cpp  Domain.cpp  Robots.cpp  ThreadPool.cpp  main.cpp
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/websocket/: websocket.component.html  websocket.component.scss  websocket.component.ts
frontend/src/app/websocket-service/: websocket.service.ts
src/: Crawler.cpp  Link.cpp  main.cpp
